--- a/KosaESS/src/main/resources/templates/include/manager_header.html
+++ b/KosaESS/src/main/resources/templates/include/manager_header.html
@@ -8,5 +8,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="icon" href="/img/icon.png"/>
-<title>KOSA 교육관리 시스템</title>
+<title>KOSA 교육 지원 시스템</title>
 </head>
