--- a/KosaESS/src/main/resources/templates/include/manager_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/manager_subbar.html
@@ -71,7 +71,7 @@
 							
 						</div>
 					</div>
-					<i class='bx bx-log-out' id="log_out"><a onclick="logout()"><img
+					<i class='bx bx-log-out' id="log_out" style="background: #1d1b31;"><a onclick="logout()"><img
 								style="width: 35px; object-fit: contain;margin-top: 5px;" class='bx bx-log-out'
 								id="log_out" th:src="@{/img/logout_white.png}"></a></i>
 				</div>
