--- a/KosaESS/src/main/resources/templates/signup.html
+++ b/KosaESS/src/main/resources/templates/signup.html
@@ -17,7 +17,7 @@
 		<header>
 			<!--NAVER LOGO-->
 			<div class="logo">
-				<a th:href="@{/student}" target="_blank" title="KOSA교육관리시스템"><img
+				<a th:href="@{/student}" title="KOSA교육관리시스템"><img
 					th:src="@{/img/logo.png}" class="image"></a>
 			</div>
 		</header>
