[dabin][#update] 임시저장

--- a/KosaESS/src/main/resources/static/css/manager_subbar.css
+++ b/KosaESS/src/main/resources/static/css/manager_subbar.css
@@ -78,7 +78,7 @@
 
 .sidebar li {
 	position: relative;
-	margin:0;
+	margin: 0;
 	list-style: none;
 }
 
@@ -126,6 +126,12 @@
 	color: #0E5881;
 }
 
+.sidebar li div i:hover {
+	background: #E7EFF3;
+	color: #0E5881;
+}
+
+
 .sidebar li a .links_name {
 	color: #fff;
 	font-size: 15px;
@@ -151,7 +157,7 @@
 	line-height: 50px;
 	font-size: 18px;
 	border-radius: 12px;
-	margin-left:10px;
+	margin-left: 10px;
 }
 
 .sidebar li.profile {
@@ -180,7 +186,7 @@
 	object-fit: cover;
 	border-radius: 6px;
 	margin-right: 10px;
-	margin-top:10px;
+	margin-top: 10px;
 }
 
 .sidebar li.profile .name, .sidebar li.profile .job {
@@ -243,10 +249,10 @@
 }
 
 .logo {
-	width:70%;
+	width: 70%;
 }
 
 .open_icon {
-		width: 20px;
-		margin-right:10px;
-	}
+	width: 20px;
+	margin-right: 10px;
+}
