--- a/KosaESS/src/main/resources/templates/include/student_subbar.html
+++ b/KosaESS/src/main/resources/templates/include/student_subbar.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>Manager MainPage</title>
 </head>
-<body th:fragment="subbar">
-	<div class="sidebar">
+<body>
+	<div class="sidebar" th:fragment="subbar">
 		<ul>
 			<li class="active" data-image="/img/user_white.png"
 				data-original-image="/img/user_navy.png"><img
