--- a/KosaESS/src/main/resources/templates/manager/class_list.html
+++ b/KosaESS/src/main/resources/templates/manager/class_list.html
@@ -20,6 +20,10 @@
 		<div class="content_wrap">
 			<!-- 검색 필터 부분 -->
 			<div class="search_filter_wrap">
+				<div id="search_by_name_wrap" style="display:flex;">
+					<input type="text" id="search_by_name">
+					<input type="button" id="search_by_name_btn" value="검색" onclick="fetchClassList()">
+				</div>
 				<span>교육과정 상태</span>
 				<ul class="search_filter_list">
 					<li><span>
